--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript">
+      var DropdownHTMLElements = document.querySelectorAll(".ms-Dropdown");
+      for (var i = 0; i < DropdownHTMLElements.length; ++i) {
+        var Dropdown = new fabric["Dropdown"](DropdownHTMLElements[i]);
+      }
+    </script>
   </body>
 </html>
