--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>deVere Mortgages</title>
+    <meta name="description" content="Provides a mortgage suitability tool for deVere UK Mortgages for Overseas Clients" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -37,11 +38,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script type="text/javascript">
-      var DropdownHTMLElements = document.querySelectorAll(".ms-Dropdown");
-      for (var i = 0; i < DropdownHTMLElements.length; ++i) {
-        var Dropdown = new fabric["Dropdown"](DropdownHTMLElements[i]);
-      }
-    </script>
   </body>
 </html>
