manually add google analytics

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,24 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>deVere Mortgages</title>
-    <meta name="description" content="Provides a mortgage suitability tool for deVere UK Mortgages for Overseas Clients" />
+    <meta
+      name="description"
+      content="Provides a mortgage suitability tool for deVere UK Mortgages for Overseas Clients"
+    />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-MK5XSZ15NS"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-MK5XSZ15NS");
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
